# Heart-Disease-Prediction

./: README.md  app.py  data  main.py  pyproject.toml
models/: heart_model.pkl
src/: dataloader.py  eda.py  model.py  preprocessor.py
